crates/shuffle/tests/snapshots/scenario_fixtures__partition_filtered_hints.snap
---
source: crates/shuffle/tests/scenario_fixtures.rs
expression: "Checkpoint { frontier: &frontier, read, }"
---
Checkpoint {
    frontier: Frontier {
        journals: [
            JournalFrontier {
                journal: "testing/apples/2020202020202020/category=alpha/pivot=00",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:01),
                        last_commit: Clock(0s 4000ns),
                        hinted_commit: Clock(0s 4000ns),
                        offset: -258,
                    },
                ],
                bytes_read_delta: 258,
                bytes_behind_delta: 0,
            },
            JournalFrontier {
                journal: "testing/apples/2020202020202020/category=gamma/pivot=00",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:01),
                        last_commit: Clock(0s 4000ns),
                        hinted_commit: Clock(0s 4000ns),
                        offset: -258,
                    },
                ],
                bytes_read_delta: 258,
                bytes_behind_delta: 0,
            },
        ],
        flushed_lsn: [
            1/0,
        ],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        binding_gap_floors: {},
        unresolved_hints: 0,
    },
    read: [
        ReadEntry {
            binding: 0,
            journal: "testing/apples/2020202020202020/category=alpha/pivot=00",
            doc: Object {
                "_meta": Object {
                    "uuid": String("1381400a-1dd2-11b2-8001-010000000001"),
                },
                "category": String("alpha"),
                "id": String("pf-alpha"),
                "value": Number(1),
            },
        },
        ReadEntry {
            binding: 0,
            journal: "testing/apples/2020202020202020/category=gamma/pivot=00",
            doc: Object {
                "_meta": Object {
                    "uuid": String("1381401e-1dd2-11b2-8001-010000000001"),
                },
                "category": String("gamma"),
                "id": String("pf-gamma"),
                "value": Number(3),
            },
        },
    ],
}
