crates/shuffle/tests/snapshots/scenario_fixtures__resume_from_checkpoint_recovery.snap
---
source: crates/shuffle/tests/scenario_fixtures.rs
expression: "Checkpoint { frontier: &recovery_frontier, read: recovery_read, }"
---
Checkpoint {
    frontier: Frontier {
        journals: [
            JournalFrontier {
                journal: "testing/apples/2020202020202020/category=alpha/pivot=00",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:01),
                        last_commit: Clock(0s 3000ns),
                        hinted_commit: Clock(0s 3000ns),
                        offset: -257,
                    },
                ],
                bytes_read_delta: 257,
                bytes_behind_delta: 105,
            },
            JournalFrontier {
                journal: "testing/bananas/2020202020202020/category=alpha/pivot=00",
                binding: 1,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:01),
                        last_commit: Clock(0s 3000ns),
                        hinted_commit: Clock(0s 3000ns),
                        offset: -257,
                    },
                ],
                bytes_read_delta: 257,
                bytes_behind_delta: 0,
            },
        ],
        flushed_lsn: [
            1/0,
        ],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        unresolved_hints: 0,
    },
    read: [
        ReadEntry {
            binding: 0,
            journal: "testing/apples/2020202020202020/category=alpha/pivot=00",
            doc: Object {
                "_meta": Object {
                    "uuid": String("1381400a-1dd2-11b2-8001-010000000001"),
                },
                "category": String("alpha"),
                "id": String("r-apple"),
                "value": Number(100),
            },
        },
        ReadEntry {
            binding: 1,
            journal: "testing/bananas/2020202020202020/category=alpha/pivot=00",
            doc: Object {
                "_meta": Object {
                    "uuid": String("13814014-1dd2-11b2-8001-010000000001"),
                },
                "category": String("alpha"),
                "id": String("r-banana"),
                "value": Number(200),
            },
        },
    ],
}
